--- a/carts/helm/carts/templates/deployment.yaml
+++ b/carts/helm/carts/templates/deployment.yaml
@@ -68,10 +68,4 @@ spec:
           initialDelaySeconds: 60
           periodSeconds: 10
           timeoutSeconds: 15
-        resources:
-          limits:
-              cpu: 1000m
-              memory: 2048Mi
-          requests:
-              cpu: 500m
-              memory: 1024Mi
+        resources: {}
